# yagwip_package

./: LICENSE  README.md  pyproject.toml  setup.py  yagwip.py
docs/: README.md  conf.py  devtools.md  test.rst
docs/_build/doctrees/: environment.pickle  index.doctree  test.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  test.html
src/: README.md  experiment.py  gromacs_sim.py  remd.py
src/assets/: quotes.txt  yagtraj_banner.txt  yagwip_banner.txt
src/templates/: em.mdp  em_fep.mdp  ions_fep.mdp  npt.mdp  npt_fep.mdp  nvt.mdp  nvt_fep.mdp  production.mdp  production_fep.mdp  run_gmx_fep_cpu.slurm  run_gmx_fep_min_cpu.slurm  run_gmx_md_cpu.slurm  run_gmx_md_min_cpu.slurm  run_gmx_tremd_cpu.slurm  run_gmx_tremd_min_cpu.slurm  topol.top
src/utils/: batch_processor.py  gromacs_runner.py  log_utils.py  pipeline_utils.py  slurm_utils.py
src/yagwip/: __init__.py  base.py  batch_processor.py  build.py  config.py  dual_hybrid_topologies.py  experiment.py  fep_prep.py  fep_utils.py  forcefield_utils.py  gromacs_runner.py  gromacs_sim.py  ligand_builder.py  log.py  logger.py  parser.py  pipeline_utils.py  remd.py  sim.py  slurm_utils.py  slurm_writer.py  tremd_calc.py  tremd_prep.py  utils.py  yagtraj.py  yagwip.py
src/yagwip.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/yagwip/assets/: quotes.txt  yagtraj_banner.txt  yagwip_banner.txt
src/yagwip/templates/: em_fep.mdp  ions_fep.mdp  npt.mdp  npt_fep.mdp  nvt.mdp  nvt_fep.mdp  production_fep.mdp  remd_template.mdp  run_gmx_fep_cpu.slurm  run_gmx_fep_min_cpu.slurm  run_gmx_md_cpu.slurm  run_gmx_md_gpu.slurm  (+7 more)
(+2 files in other folders)
